--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Meta Tags -->
+    
     <title>
       Pralhad Neupane | Expert MERN Stack Developer | React Node.js MongoDB
     </title>
@@ -13,6 +14,7 @@
       name="description"
       content="Pralhad Neupane - Expert Full Stack MERN Developer from Nepal. Pralhad specializes in React, Node.js, MongoDB, Express development. Portfolio showcasing Pralhad Neupane's modern web applications."
     />
+    <meta name="google-site-verification" content="4LbUw3elJEHJEmPpDMqiqbmWU77XiveTv89MdauK1rM" />
     <meta
       name="keywords"
       content="Pralhad Neupane, Pralhad Neupane MERN Developer, Pralhad Neupane React Developer, Pralhad Neupane Portfolio, MERN Stack Developer Nepal, Full Stack Developer Pralhad, JavaScript Developer Pralhad Neupane, MongoDB Express React Node.js Developer"
